# bloccoNote

./: CMakeLists.txt  FavoritesWindow.cpp  FavoritesWindow.h  FolderManager.cpp  FolderManager.h  GUI.cpp  GUI.h  GUInterface.cpp  GUInterface.h  IdPushButton.cpp  IdPushButton.h  KvK.cpp  KvK.h  KvK.py  LockedWindow.cpp  LockedWindow.h  LsmL.cpp  LsmL.h  MainWindow.cpp  MainWindow.h  Note.cpp  Note.h  NoteFolder.cpp  NoteFolder.h  NotesManager.cpp  NotesManager.h  NotesMemory.cpp  NotesMemory.h  db.cpp  db.h  main.cpp  responsability  utils.cpp  utils.h
Documentation/: LsmL_Documentation.md  README.md  bloccoNoteUML.mdj
test/: CMakeLists.txt  FolderManagerTest.cpp  LsmLFixture.cpp  LsmLTest.cpp  NotesManagerTest.cpp
test/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
test/lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
test/lib/googletest/test/: gtest-death-test_test.cc  gtest-port_test.cc  gtest_unittest.cc
